<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/action_bar_title" />

    <DatePicker
        android:layout_width="match_parent"
        android:layout_height="@dimen/width180" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/width20"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/width40"
            android:layout_height="@dimen/width40"
            android:src="@drawable/date_seven" />

        <ImageView
            android:layout_width="@dimen/width40"
            android:layout_height="@dimen/width40"
            android:src="@drawable/date_one" />

        <ImageView
            android:layout_width="@dimen/width40"
            android:layout_height="@dimen/width40"
            android:src="@drawable/date_two" />

        <ImageView
            android:layout_width="@dimen/width40"
            android:layout_height="@dimen/width40"
            android:src="@drawable/date_three" />

        <ImageView
            android:layout_width="@dimen/width40"
            android:layout_height="@dimen/width40"
            android:src="@drawable/date_four" />

        <ImageView
            android:layout_width="@dimen/width40"
            android:layout_height="@dimen/width40"
            android:src="@drawable/date_five" />

        <ImageView
            android:layout_width="@dimen/width40"
            android:layout_height="@dimen/width40"
            android:src="@drawable/date_six" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/width1"
        android:layout_marginLeft="@dimen/width30"
        android:layout_marginRight="@dimen/width30"
        android:layout_marginTop="@dimen/width20"
        android:background="@color/title_right_view_pressed" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/width40"
        android:layout_marginRight="@dimen/width60"
        android:layout_marginLeft="@dimen/width60">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_time_repeat"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize18"
            android:layout_centerVertical="true"/>

        <ImageView
            android:layout_width="@dimen/width35"
            android:layout_height="@dimen/width35"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/time_repeat"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/width1"
        android:layout_marginLeft="@dimen/width30"
        android:layout_marginRight="@dimen/width30"
        android:background="@color/title_right_view_pressed" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/width40"
        android:layout_marginRight="@dimen/width60"
        android:layout_marginLeft="@dimen/width60">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_time_mode"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize18"
            android:layout_centerVertical="true"/>

        <ImageView
            android:layout_width="@dimen/width35"
            android:layout_height="@dimen/width35"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_right"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/width1"
        android:layout_marginLeft="@dimen/width30"
        android:layout_marginRight="@dimen/width30"
        android:background="@color/title_right_view_pressed" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/width40"
        android:layout_marginRight="@dimen/width60"
        android:layout_marginLeft="@dimen/width60">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_time_temp"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize18"
            android:layout_centerVertical="true"/>

        <ImageView
            android:layout_width="@dimen/width35"
            android:layout_height="@dimen/width35"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_right"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/width1"
        android:layout_marginLeft="@dimen/width30"
        android:layout_marginRight="@dimen/width30"
        android:background="@color/title_right_view_pressed" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/width40"
        android:layout_marginRight="@dimen/width60"
        android:layout_marginLeft="@dimen/width60">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_time_speed"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize18"
            android:layout_centerVertical="true"/>

        <ImageView
            android:layout_width="@dimen/width35"
            android:layout_height="@dimen/width35"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_right"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/width1"
        android:layout_marginLeft="@dimen/width30"
        android:layout_marginRight="@dimen/width30"
        android:background="@color/title_right_view_pressed" />

</LinearLayout>