<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/action_bar_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/top_rel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@color/title_right_view_default">

            <TextView
                android:id="@+id/humidity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/width10"
                android:layout_marginTop="@dimen/width5"
                android:text="湿度：35%"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize18" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <TextView
                    android:id="@+id/temp_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20.5"
                    android:textColor="@color/white"
                    android:textSize="100dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/temp_text"
                    android:layout_marginLeft="@dimen/width5"
                    android:layout_toRightOf="@id/temp_text"
                    android:text="@string/degree_celsius"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize50" />

            </RelativeLayout>

            <TextView
                android:id="@+id/month_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/width5"
                android:layout_marginLeft="@dimen/width10"
                android:text="本月当量时间：39小时42分"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize10" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/width5">

                <TextView
                    android:id="@+id/mode_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="制冷"
                    android:textColor="@color/white"
                    android:textSize="@dimen/width10" />

                <TextView
                    android:id="@+id/speed_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/width10"
                    android:layout_toRightOf="@id/mode_text"
                    android:text="高速"
                    android:textColor="@color/white"
                    android:textSize="@dimen/width10" />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/width10"
                android:layout_marginTop="@dimen/width10"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/minus_bt"
                        android:layout_width="@dimen/width40"
                        android:layout_height="@dimen/width40"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/width70"
                        android:src="@drawable/icon_minus_off" />

                    <TextView
                        android:id="@+id/small_temp_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="20.5"
                        android:textColor="@color/title_right_view_default"
                        android:textSize="@dimen/textsize50" />

                    <ImageView
                        android:id="@+id/plus_bt"
                        android:layout_width="@dimen/width40"
                        android:layout_height="@dimen/width40"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/width70"
                        android:src="@drawable/icon_plus_off" />

                </RelativeLayout>

                <View
                    android:id="@+id/temp_view_1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/width1"
                    android:layout_marginLeft="@dimen/width50"
                    android:layout_marginRight="@dimen/width50"
                    android:background="@color/title_right_view_default" />

                <RelativeLayout
                    android:layout_width="@dimen/width270"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:id="@+id/pop_rel"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/width68"
                        android:layout_centerVertical="true">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/width50"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/mode_bt"
                                android:layout_width="@dimen/width40"
                                android:layout_height="@dimen/width40"
                                android:src="@drawable/mode_cool" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="@dimen/width2"
                                android:text="@string/mode_text"
                                android:textColor="@color/title_right_view_default"
                                android:textSize="@dimen/textsize15" />

                        </LinearLayout>

                        <View
                            android:id="@+id/temp_view_2"
                            android:layout_width="@dimen/width1"
                            android:layout_height="match_parent"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="@dimen/width10"
                            android:layout_marginTop="@dimen/width10"
                            android:background="@color/title_right_view_default" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="@dimen/width50"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/speed_bt"
                                android:layout_width="@dimen/width40"
                                android:layout_height="@dimen/width40"
                                android:src="@drawable/mode_heat" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="@dimen/width2"
                                android:text="@string/speed_text"
                                android:textColor="@color/title_right_view_default"
                                android:textSize="@dimen/textsize15" />

                        </LinearLayout>

                    </RelativeLayout>

                </RelativeLayout>

                <View
                    android:id="@+id/temp_view_3"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/width1"
                    android:layout_marginLeft="@dimen/width50"
                    android:layout_marginRight="@dimen/width50"
                    android:background="@color/title_right_view_default" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/width70"
                        android:layout_marginRight="@dimen/width70"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/switch_bt"
                                android:layout_width="@dimen/width40"
                                android:layout_height="@dimen/width40"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/icon_switch_off" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="@dimen/width2"
                                android:text="@string/switch_text"
                                android:textColor="@color/title_right_view_default"
                                android:textSize="@dimen/textsize15" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/efficint_bt"
                                android:layout_width="@dimen/width40"
                                android:layout_height="@dimen/width40"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/icon_efficient_off" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="@dimen/width2"
                                android:text="@string/efficient_text"
                                android:textColor="@color/title_right_view_default"
                                android:textSize="@dimen/textsize15" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/lock_bt"
                                android:layout_width="@dimen/width40"
                                android:layout_height="@dimen/width40"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/icon_lock_off" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="@dimen/width2"
                                android:text="@string/lock_text"
                                android:textColor="@color/title_right_view_default"
                                android:textSize="@dimen/textsize15" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/timer_bt"
                                android:layout_width="@dimen/width40"
                                android:layout_height="@dimen/width40"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/icon_time_off" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="@dimen/width2"
                                android:text="@string/time_text"
                                android:textColor="@color/title_right_view_default"
                                android:textSize="@dimen/textsize15" />

                        </LinearLayout>

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>